--- a/web.xml
+++ b/web.xml
@@ -4,18 +4,18 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
                              http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-    <display-name>XML-RPC bouncer</display-name>
+    <display-name>XML-RPC Relay</display-name>
     <description>
-        Bounces XML-RPC mesages.
+        Relays XML-RPC messages between clients.
     </description>
 
     <servlet>
-        <servlet-name>Bouncer</servlet-name>
-        <servlet-class>org.astrogrid.samp.tls.BounceServlet</servlet-class>
+        <servlet-name>Relay</servlet-name>
+        <servlet-class>org.astrogrid.samp.tls.RelayServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>Bouncer</servlet-name>
+        <servlet-name>Relay</servlet-name>
         <url-pattern>/xmlrpc</url-pattern>
     </servlet-mapping>
 
